Implement input functions for extended statistics types
In order restore a dumped extended statistics (stxdndistinct, stxddependencies, stxdmcv) we need to provide input functions to parse pg_distinct/pg_dependency/pg_mcv_list strings.

Today we get the ERROR "cannot accept a value of type pg_ndistinct/pg_dependencies/pg_mcv_list" when we try to do an insert of any type.

Approach :
- Using yacc grammar file (statistics_gram.y) to parse the input string to its internal format for the types pg_distinct and pg_dependencies
- We are just calling byteain() for serialized input text of type pg_mcv_list.
- Add regress testcases for intput  functions pg_dependencies_in and pg_ndistinct_in

Usecase:
        - Helps for reproducing complex customer issues locally
        - dump and restore using pg_upgrade and pg_restore

Co-authored-by: David Kimura dkimura@vmware.com

--- a/src/backend/statistics/meson.build
+++ b/src/backend/statistics/meson.build
@@ -6,3 +6,18 @@ backend_sources += files(
   'mcv.c',
   'mvdistinct.c',
 )
+
+stats_scan = custom_target('statsscan',
+  input: 'statistics_scanner.l',
+  output: 'statistics_scanner.c',
+  command: flex_cmd,
+)
+generated_sources += stats_scan
+backend_sources += stats_scan
+
+stats_gram = custom_target('stats_gram',
+  input: 'statistics_gram.y',
+  kwargs: bison_kw,
+)
+generated_sources += stats_gram.to_list()
+backend_sources += stats_gram
