--- a/src/backend/statistics/Makefile
+++ b/src/backend/statistics/Makefile
@@ -16,6 +16,9 @@ OBJS = \
 	dependencies.o \
 	extended_stats.o \
 	mcv.o \
-	mvdistinct.o
+	mvdistinct.o \
+	statistics_gram.o
+
+statistics_gram.o: statistics_scanner.c
 
 include $(top_srcdir)/src/backend/common.mk
